<resources>
    <string name="app_name">My Election</string>
    <string name="website_url">www.racayita.com</string>
    <string name="main_page">मुख्यपृष्ठ</string>
    <string name="news_and_information">बातमी आणि माहिती</string>
    <string name="news">बातम्या </string>
    <string name="biography">जीवनचरित्र</string>
    <string name="work_and_vision">कार्य आणि दृष्टी</string>
    <string name="contact_us">आमच्याशी संपर्क साधा</string>
    <string name="video">व्हिडिओ</string>

    <string name="title_news_and_information">अहमदनगर जिल्ह्यातील राहुरी तालुक्यातील देवळाली प्रवरा येथे २२ जुलै १९५९ </string>
    <string name="details_news_and_information">लहान वयातच खांद्यावर आलेली कुटुंबाची जबाबदारी समर्थपणे पेलत असतानाच आजूबाजूच्या सामाजिक प्रश्नांची जाणीव त्यांच्यात निर्माण झाली. शेतकरी-कष्टकऱ्यांच्या संवेदना समजून घेऊन त्यांचे प्रश्न सोडवण्यासाठी त्यांनी धडाडीने काम करण्यास सुरुवात केली आणि तिथेच महाराष्ट्राच्या भावी संवेदनशील नेतृत्वाची पाळं-मुळं रुजली. दूधसंघ, विविध सहकारी संस्था, साखर कारखाने, बँका या माध्यमातून महत्त्वाची पदे भूषवित सुरु झालेल्या प्रवासाला १९९१ साली नवे वळण लागले. खासदार, आमदार, राज्यमंत्री, अनेक महत्त्वाच्या खात्यांतील मंत्रीपदे आणि महाराष्ट्राचे उप-मुख्यमंत्रीपद ४ वेळा भूषविण्याचा बहुमान या कार्यकुशल नेतृत्वाला लाभला आहे.

लोकभावना जाणून घेण्यासाठी पक्षाचे कार्यकर्ते आणि सर्वसामान्य जनता यात कुठलाही भेदभाव न करता ‘जनता दरबार’च्या माध्यमातून सत्ता असो वा नसो श्री.अजित पवार कायम लोकांच्या संपर्कात असतात. गतीमान प्रशासनासाठी ते नेहमीच आग्रही असतात. कोणाचंही ‘काम पूर्ण होणार असेल तर हो अन्यथा नाही’ असं स्पष्टपणे सांगण्याची कार्यपद्धती अजितदादांची ओळख बनली आहे.

सभागृहात प्रश्न मांडत असताना आपण ज्या जनतेच्या पाठींब्यावर उभे आहोत त्या जनतेला आपण उत्तरदायी असल्याची भावना
त्यांच्या उक्तीत आणि कृतीत दिसून येते. राज्याची भू-राजकीय समज असल्यामुळे कोणताही निर्णय घेताना मुंबईतील मंत्रालयापासून कष्टकरी-शेतकऱ्यापर्यंत, चांद्यापासून-बांद्यापर्यंत जनतेच्या दैनंदिन जीवनावर त्यामुळे कसा प्रभाव पडेल याची जाण त्यांना आहे. अहोरात्र झटणाऱ्या श्री. अजित पवार यांनी मातीशी.


    सभागृहात प्रश्न मांडत असताना आपण ज्या जनतेच्या पाठींब्यावर उभे आहोत त्या जनतेला आपण उत्तरदायी असल्याची भावना</string>
</resources>