<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@mipmap/bg">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clTop"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/ivProfilePic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="22dp"
            android:padding="@dimen/padding_profile_pic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@mipmap/img_profile_pic"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website_url"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivProfilePic"
            android:autoLink="web"
            android:textColor="@color/blue"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guidelineCenter"
        android:paddingTop="@dimen/button_padding"
        android:paddingBottom="@dimen/button_padding">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btMainPage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/main_page"
                    android:background="@drawable/my_button_style"
                    android:layout_margin="@dimen/button_padding"
                    android:visibility="gone"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btBiography"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/biography"
                    android:background="@drawable/my_button_style"
                    android:layout_margin="@dimen/button_padding"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btWorkAndVision"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/work_and_vision"
                    android:background="@drawable/my_button_style"
                    android:layout_margin="@dimen/button_padding"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btNewsAndInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/news_and_information"
                    android:background="@drawable/my_button_style"
                    android:layout_margin="@dimen/button_padding"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/video"
                    android:background="@drawable/my_button_style"
                    android:layout_margin="@dimen/button_padding"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btContactUs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_us"
                    android:background="@drawable/my_button_style"
                    android:layout_margin="@dimen/button_padding"/>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>